docs/apache-airflow-providers-google/10.1.1/_sources/_api/tests/system/providers/google/cloud/automl/example_automl_nl_text_extraction/index.rst.txt
:py:mod:`tests.system.providers.google.cloud.automl.example_automl_nl_text_extraction`
======================================================================================

.. py:module:: tests.system.providers.google.cloud.automl.example_automl_nl_text_extraction

.. autoapi-nested-parse::

   Example Airflow DAG that uses Google AutoML services.



Module Contents
---------------

.. py:data:: ENV_ID

   

.. py:data:: DAG_ID
   :value: 'example_automl_text'

   

.. py:data:: GCP_PROJECT_ID

   

.. py:data:: GCP_AUTOML_LOCATION
   :value: 'us-central1'

   

.. py:data:: DATA_SAMPLE_GCS_BUCKET_NAME

   

.. py:data:: RESOURCE_DATA_BUCKET
   :value: 'system-tests-resources'

   

.. py:data:: DATASET_NAME
   :value: 'test_entity_extr'

   

.. py:data:: DATASET

   

.. py:data:: AUTOML_DATASET_BUCKET

   

.. py:data:: IMPORT_INPUT_CONFIG

   

.. py:data:: MODEL_NAME
   :value: 'entity_extr_test_model'

   

.. py:data:: MODEL

   

.. py:data:: extract_object_id

   

.. py:data:: create_bucket

   

.. py:data:: test_run

   

